# frost-taproot

./: .gitignore  Cargo.lock.old  Cargo.toml  LICENSE.txt  README.md  frost_notes.md
core/: Cargo.toml
core/src/: lib.rs
core/src/frost/: bip340.rs  challenge.rs  dkg.rs  hash.rs  math.rs  mod.rs  serde.rs  sig.rs  test.rs  thresh.rs
src/: lib.rs
src/dkg/: frost.rs
src/frost/: bip340.rs  challenge.rs  dkg.rs  math.rs  mod.rs  serde.rs  sig.rs  test.rs  thresh.rs
wasm/: .gitignore  Cargo.toml  test.html  test.js
wasm/src/: frost_secp256k1.rs  lib.rs
