[package]
name = "krustology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "=4.0.0-pre.1"
ff = { version = "0.10", features = ["bits"] }
elliptic-curve = { version = "0.10", features = ["serde"] }
rand = { version = "0.8", features = ["getrandom"] }

[dependencies.vsss-rs]
git = "https://github.com/mikelodder7/vsss-rs.git"
rev = "5d44175ddf8ed0437f0573759399c77bd56d2d79"
default-features = false
features = ["curve25519", "std"]
