[package]
name = "krustology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9"
ff = { version = "0.10", features = ["bits"] }
elliptic-curve = { version = "0.10", features = ["serde"] }
k256 = { version = "0.9", features = ["arithmetic"] }
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
sha2 = "0.9"
thiserror = "1"
hex = "*"

[dependencies.curve25519-dalek]
git = "https://github.com/xpool-network/curve25519-dalek.git"
branch = "krusty"
default-features = true
features = ["elliptic-curve"]

[dependencies.vsss-rs]
git = "https://github.com/mikelodder7/vsss-rs.git"
rev = "5d44175ddf8ed0437f0573759399c77bd56d2d79"
default-features = false
features = ["std"]
