[package]
name = "frost-taproot"
version = "0.3.0"
edition = "2021"
authors = ["Trey Del Bonis <trey.delbonis@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10"
ff = { version = "0.12", features = ["bits"] }
group = "0.12"
elliptic-curve = { version = "0.12", features = ["serde", "sec1", "arithmetic", "hazmat"] }
k256 = { version = "0.12.0-pre.0", features = ["arithmetic", "schnorr"] }
#k256 = { path = "../../elliptic-curves/k256", features = ["arithmetic", "schnorr"] }
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_with = "2.1"
sha2 = "0.10"
thiserror = "1"
hex = { version = "*", features = ["serde"] }
#vsss-rs = { version = "2.1", default-features = false, features = ["std"] }

#[dependencies.curve25519-dalek]
#git = "https://github.com/xpool-network/curve25519-dalek.git"
#branch = "krusty"
#default-features = true
#features = ["elliptic-curve"]

[dependencies.vsss-rs]
git = "https://github.com/mikelodder7/vsss-rs.git"
rev = "1a0c7ca699f5fcc4133cf3d9a7df6fa5c79dfb15"
default-features = false
features = ["std", "secp256k1"]

[features]
default = []
debug_eprintlns = []
