[package]
name = "krustology-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
krustology-core = { path = "../core" }
wasm-bindgen = "0.2"
getrandom = { version = "*", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
vsss-rs = { version = "2.1", default-features = false, features = ["std"] }