[package]
name = "frost-taproot-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
frost-taproot = { path = "../core" }
wasm-bindgen = "0.2"
getrandom = { version = "*", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_with = "*"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
k256 = "0.12.0-pre.0"
rand = "0.8"
rand_chacha = "*"
elliptic-curve = { version = "0.12", features = ["serde", "sec1", "arithmetic", "hazmat"] }

[dependencies.vsss-rs]
git = "https://github.com/mikelodder7/vsss-rs.git"
rev = "1a0c7ca699f5fcc4133cf3d9a7df6fa5c79dfb15"
default-features = false
features = ["std", "secp256k1"]
